unpackaged/main/default/objects/APXTConga4__Conga_Template__c/fields/APXTConga4__Description__c.field-meta.xml
<CustomField>
    <fullName>APXTConga4__Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>