unpackaged/main/default/objects/APXTConga4__Conga_Template__c/fields/APXTConga4__Key__c.field-meta.xml
<CustomField>
    <fullName>APXTConga4__Key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Key</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>