unpackaged/main/default/objects/APXTConga4__Conga_Template__c/fields/APXTConga4__Label_Template_Use_Detail_Data__c.field-meta.xml
<CustomField>
    <fullName>APXTConga4__Label_Template_Use_Detail_Data__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>For MassMerge Label Templates: This setting indicates to use ReportData (or QueryData) as the data source for Labels</inlineHelpText>
    <label>Label Template: Use Detail Data</label>
    <type>Checkbox</type>
</CustomField>