unpackaged/main/default/objects/APXTConga4__Conga_Template__c/fields/APXTConga4__Template_Extension__c.field-meta.xml
<CustomField>
    <fullName>APXTConga4__Template_Extension__c</fullName>
    <label>Template Extension</label>
    <length>10</length>
    <type>Text</type>
</CustomField>