unpackaged/main/default/objects/APXTConga4__Conga_Template__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>APXTConga4__Name__c</columns>
    <columns>APXTConga4__Template_Group__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>APXTConga4__Template_Type__c</columns>
    <columns>APXTConga4__Label_Template_Use_Detail_Data__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>