unpackaged/main/default/objects/APXTConga4__Conga_Template__c/listViews/Comm3_Docs.listView-meta.xml
<ListView>
    <fullName>Comm3_Docs</fullName>
    <columns>NAME</columns>
    <columns>APXTConga4__Name__c</columns>
    <columns>APXTConga4__Description__c</columns>
    <columns>APXTConga4__Template_Group__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>APXTConga4__Template_Group__c</field>
        <operation>equals</operation>
        <value>Comm3 Docs</value>
    </filters>
    <label>Comm3 Docs</label>
    <language>en_US</language>
</ListView>