unpackaged/main/default/objects/APXTConga4__Conga_Template__c/listViews/Financial_Reports.listView-meta.xml
<ListView>
    <fullName>Financial_Reports</fullName>
    <columns>NAME</columns>
    <columns>APXTConga4__Name__c</columns>
    <columns>APXTConga4__Description__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>APXTConga4__Template_Group__c</field>
        <operation>equals</operation>
        <value>Finance</value>
    </filters>
    <label>Financial Reports</label>
    <language>en_US</language>
</ListView>