unpackaged/main/default/objects/APXTConga4__Conga_Template__c/listViews/PFPB_Templates.listView-meta.xml
<ListView>
    <fullName>PFPB_Templates</fullName>
    <columns>NAME</columns>
    <columns>APXTConga4__Name__c</columns>
    <columns>APXTConga4__Description__c</columns>
    <columns>APXTConga4__Template_Group__c</columns>
    <columns>APXTConga4__Template_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>APXTConga4__Description__c</field>
        <operation>contains</operation>
        <value>PFPB</value>
    </filters>
    <label>PFPB Templates</label>
    <language>en_US</language>
</ListView>