unpackaged/main/default/objects/APXTConga4__Conga_Template__c/listViews/Price_Book_Templates.listView-meta.xml
<ListView>
    <fullName>Price_Book_Templates</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>APXTConga4__Name__c</columns>
    <columns>APXTConga4__Description__c</columns>
    <columns>APXTConga4__Template_Group__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>APXTConga4__Name__c</field>
        <operation>contains</operation>
        <value>Price Book</value>
    </filters>
    <label>Price Book Templates</label>
    <language>en_US</language>
</ListView>