unpackaged/main/default/objects/APXTConga4__Conga_Template__c/listViews/Proposal.listView-meta.xml
<ListView>
    <fullName>Proposal</fullName>
    <columns>NAME</columns>
    <columns>APXTConga4__Name__c</columns>
    <columns>APXTConga4__Template_Group__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>APXTConga4__Template_Group__c</field>
        <operation>equals</operation>
        <value>Proposal</value>
    </filters>
    <label>Proposal</label>
    <language>en_US</language>
</ListView>