unpackaged/main/default/objects/APXTConga4__Conga_Template__c/listViews/Sales_Orders.listView-meta.xml
<ListView>
    <fullName>Sales_Orders</fullName>
    <columns>NAME</columns>
    <columns>APXTConga4__Name__c</columns>
    <columns>APXTConga4__Description__c</columns>
    <columns>APXTConga4__Template_Group__c</columns>
    <columns>APXTConga4__Template_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>APXTConga4__Name__c</field>
        <operation>contains</operation>
        <value>Sales Order</value>
    </filters>
    <label>Sales Orders</label>
    <language>en_US</language>
</ListView>